--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,9 +23,9 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    
   provider: 
-
+  path_provider:
+ 
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
