--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
     sdk: flutter
   provider: 
   path_provider:
+  sqflite:
  
 
   # The following adds the Cupertino Icons font to your application.
